# loppers

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  HANDLED_CASES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: __init__.py  runner.py  sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.js  sample.kt  sample.php  sample.py  sample.rb  sample.rs  sample.ts  sample.tsx
src/loppers/: __init__.py  cli.py  concatenator.py  extensions.py  ignore_patterns.py  loppers.py  mapping.py  source_utils.py
tests/: __init__.py  test_loppers.py
