[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dynamic version updated by semantic-release
version = "1.3.1"

[project]
name = "loppers"
dynamic = ["version"]
description = "Extract source file skeletons using tree-sitter queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "manolo.santos@gmail.com" }]
keywords = [
  "tree-sitter",
  "code-skeleton",
  "extraction",
  "parsing",
  "ast",
  "loppers",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tree-sitter>=0.25.0",
  "tree-sitter-language-pack>=0.10.0",
  "binaryornot>=0.4.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[project.scripts]
loppers = "loppers.cli:main"

[project.urls]
Homepage = "https://github.com/undo76/loppers"
Documentation = "https://github.com/undo76/loppers#readme"
Repository = "https://github.com/undo76/loppers"
Issues = "https://github.com/undo76/loppers/issues"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "python-semantic-release>=8.0.0",
  "build>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.version]
path = "pyproject.toml"
pattern = 'version = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/loppers"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "D",   # pydocstyle
]
ignore = [
  "E203", # whitespace before ':'
  "D104", # missing docstring in public package
  "D100", # missing docstring in public module
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["loppers"]

# Python Semantic Release configuration
[tool.semantic_release]
version_pattern = "v{version}"
version_variables = ["pyproject.toml:version"]
upload_to_pypi = false
build_command = ""
branch = "main"
commit_message = "chore(release): {version}"
allow_zero_version = false
logging_use_colored_logs = true
parser_angular_patch_types = ["fix", "perf"]
parser_angular_minor_types = ["feat"]
parser_angular_major_types = ["BREAKING CHANGE"]
